--- a/report/lab_report.tex
+++ b/report/lab_report.tex
@@ -14,6 +14,7 @@
 \usepackage{libertine}
 \usepackage{fancyref}
 \usepackage{newtxmath}
+\usepackage{afterpage}
 \usepackage[T1]{fontenc}
 \graphicspath{{../}}
 \lstset{inputpath={../}}
@@ -36,6 +37,7 @@
 \include{problem4}
 \include{discussion}
 \include{conclusion}
+\afterpage{\null\newpage}
 
 \appendix
 \include{matlab}
