--- a/report/discussion.tex
+++ b/report/discussion.tex
@@ -1,11 +1,9 @@
 \section{Discussion}\label{sec:discussion}
 \subsection{Optimal control without feedback}
-When controlling the helicopter with only the estimated optimal input sequence, the linearization and modeling errors becomes too large, and the helicopters behavior will deviate drastically from the estimated response. However, there is one benefit from using optimal control without feedback; the ability to limit inputs. So if the system need optimal control with limits on states and inputs, and also need feedback, MPC is the way to go. See section under.
+When controlling the helicopter with only the estimated optimal input sequence, the deviation due to linearization and modelling errors became too large, and the helicopter deviated drastically from the optimal trajectory. However, there was one benefit from using optimal control without feedback; the ability to limit inputs. So if the system need optimal control with limits on states and inputs, and in addition feedback, MPC is the way to go. See section below.
 
 \subsection{Optimal control with feedback}
-While the open-loop configuration of optimal control was quite poor, the closed-loop configuration with a LQR was quite promising. Our testing showed that the optimal state trajectory was much more useful than the optimal input sequence. With a LQR this could be achieved by weighting the error in travel and pitch quite much. This way the regulator acts like a compensator on modeling errors since its additive with the optimal input sequence.
-
-Another effect of including feedback on an optimal trajectory is that the final input is no longer guaranteed to be within the constraints of the optimization problem.
+While the open-loop optimal control was quite poor, the closed-loop configuration with a LQR was quite promising. Because of modelling errors, the optimal input sequence calculated did not lead to the helicopter following its optimal travel or elevation trajectory, and we ended up with the helicopter drifting away from the solution. Because of this, we had to penalize deviations in these trajectories rather than pitch. Another effect of including feedback on an optimal trajectory was that the final input was no longer guaranteed to be within the constraints of the optimization problem.
 
 \subsection{MPC with implicit feedback}
-As mentioned in the first section, optimal open-loop configuration performs quite poor caused by the lack of feedback. This is where MPC makes an entry, with its re-optimization every time step with the previous measured / estimated state as initial conditions. Since this is done every time step, only the first step of the input sequence is used. This way we get both an implicit feedback and the possibilities to set constraints on states and inputs. 
+As mentioned in the first section, the optimal open-loop configuration performed quite poor due to the lack of feedback. This is where MPC makes an entry, with its re-optimization on every time step with the measured/estimated state as initial condition. Only the first step of the input sequence is used. This is because the new measurement on the next step will give a better trajectory. This way you get both implicit feedback and the ability to set constraints on states and inputs. 
