--- a/report/problem2.tex
+++ b/report/problem2.tex
@@ -100,7 +100,7 @@ We solved the optimization problem using the built-in MATLAB function \texttt{qu
 
 \begin{figure}[htb]
     \centering
-    \includegraphics[width=1.0\textwidth]{figures/day2/plot_day2}
+    \includegraphics{figures/day2/plot_day2}
     \caption{Comparison of optimal and measured trajectories for $q = 1$.}
     \label{fig:day2_plot}
 \end{figure}
