--- a/report/conclusion.tex
+++ b/report/conclusion.tex
@@ -1,4 +1,4 @@
 \section{Conclusion}\label{sec:conclusion}
-In this report we have tried to control a helicopter with different approaches to optimal control and control theory. Controlling the helicopter with an optimal input sequence without any feedback was not a good solution since the model we use in the optimization is quite simplified.
+In this report we have tried to control a helicopter with different approaches, using optimal control and control theory. Controlling the helicopter with an optimal input sequence without any feedback was not a good solution, since the model we used in the optimization was quite simplified.
 
-Controlling the helicopter with optimal input sequence and a well tuned LQR proved a good solution witch not demand excessive computational power. With this solution we sacrifices the ability to limit the inputs, since the LQR don't have the ability to limit its output. If feedback and limits in input are needed, the solution would be to use MPC. This is not possible on fast and small systems today, since they require excessive computational power.
+Controlling the helicopter with optimal input sequence and a well tuned LQR proved a good solution, which does not demand excessive computational power. With this solution we sacrifice the ability to impose hard constraints on the input and state, since the LQR does not have the ability to limit its output. If feedback and constraints are needed, the solution would be to use MPC. However, this is not feasible for real-time demands on restrictive hardware, since it is much more computationally intensive.
