--- a/report/lab_report.tex
+++ b/report/lab_report.tex
@@ -18,7 +18,7 @@
 \usepackage[T1]{fontenc}
 \graphicspath{{../}}
 \lstset{inputpath={../}}
-\usepackage[hidelinks]{hyperref} % Always load last
+\usepackage[hidelinks,bookmarksnumbered]{hyperref} % Always load last
 
 \studentnumbers{736698, 742388, 742367, 755875 and 731918}
 \groupnumber{17}
