--- a/report/problem1.tex
+++ b/report/problem1.tex
@@ -1,3 +1,3 @@
 \section{Repetition/Introduction to Simulink/QuaRC}\label{sec:prob1}
 
-This part is just a repetition, and therefore does not contain any important results. However, the part is important because it is used to test the hardware setup at the lab. This is done using a handed out model that made the helicopter hover at zero elevation and zero pitch. The helicopter suffered from minor drifting as a result of the motors being treated as equal, while they actually should be tuned separately with one motor constant each. 
+This part is just a repetition, and therefore does not contain any important results. However, the part is important because it is used to test the hardware setup at the lab. This is done using a handed out model that make the helicopter hover at zero elevation and zero pitch. The helicopter suffered from minor drifting as a result of the motors being treated as equal, while they actually should be tuned separately with one motor constant each. 
