Fixed TOC by removing subsection header

--- a/report/problem_descr.tex
+++ b/report/problem_descr.tex
@@ -1,6 +1,6 @@
 \section{Problem Description}\label{sec:prob_descr}
 
-\subsection{Hardware setup}
+\subsection{Hardware and software setup}
 The helicopter is fixed to a base and has an extended arm with motors attached at one end,
 and a balance weight at the other. We parametrize the helicopter state by three rotations:
 \begin{itemize}
@@ -17,7 +17,6 @@ These angles are measured by the encoders at each rotational joint. We can affec
 	\label{fig:hardware}
 \end{figure}
 
-\subsection{Software setup}
 We use Simulink and Matlab to implement the control program, and interface with the helicopter through QuaRC and Realtime Workshop. See [\cite{LabExercise}] for more information.
 
 \subsection{Model discussion}
