--- a/report/problem3.tex
+++ b/report/problem3.tex
@@ -6,7 +6,7 @@ Feedback for the system is introduced by adding a correcting term to the optimal
 \begin{equation}
     u_k = u_k^* - K^T(x_k - x_k^*)
 \end{equation}
-Here $x^*$ is the optimal trajectory and $u^*$ is the optimal input sequence. The block diagram structure of the helicopter with feedback can be seen in figure (\ref{fig:simulink_day3}). $K$ is selected as the optimal feedback gain, found by minimizing the objective function
+Here $x^*$ is the optimal trajectory and $u^*$ is the optimal input sequence. The block diagram structure of the helicopter with feedback can be seen in figure \ref{fig:simulink_day3}. $K$ is selected as the optimal feedback gain, found by minimizing the objective function
 \begin{equation}
     \label{eq:cost_function_lqr_day3}
     J = \sum_{i=0}^\infty {\Delta x_{i+1}^TQ\Delta x_{i+1} + \Delta u_{i}^TR\Delta u_{i}}
@@ -19,9 +19,9 @@ where $\Delta x$ and $\Delta u$ are deviations from the optimal trajectory. Q an
 
 \subsection{Results}
 
-We used the built-in MATLAB function dlqr to solve the Riccati-equation for the optimization problem corresponding to (\ref{eq:cost_function_lqr_day3}), and compute the optimal gain $K$. We chose $Q$ and $R$ to be diagonal matrices, with $R$ constant and equal to the identity. $Q$ was then tuned by increasing or decreasing the weights along the diagonal.
+We used the built-in MATLAB function dlqr to solve the Riccati-equation for the optimization problem corresponding to (\ref{eq:cost_function_lqr_day3}), and compute the optimal gain $K$. We chose $Q$ and $R$\ to be diagonal matrices, with $R$ constant and equal to the identity. $Q$ was then tuned by increasing or decreasing the weights along the diagonal.
 
-We found that by keeping R constant at unity weight and tuning Q, we saw that by weighting travel more than pitch (50 1 1 1), the helicopter followed the travel trajectory closer than when weighting all states the same. Weighting deviation in pitch more than travel (1 1 10 1) gave a bad result. Figure (\ref{fig:day3_plot_allQ}) shows how the trajectory based on these different weights turned out compared to the mathematical optimal path. The reason for this was that the optimal pitch reference trajectory was based on a linearized model.
+We found that by keeping R constant at unity weight and tuning Q, we saw that by weighting travel more than pitch (50 1 1 1), the helicopter followed the travel trajectory closer than when weighting all states the same. Weighting deviation in pitch more than travel (1 1 10 1) gave a bad result. Figure \ref{fig:day3_plot_allQ} shows how the trajectory based on these different weights turned out compared to the mathematical optimal path. The reason for this was that the optimal pitch reference trajectory was based on a linearized model.
 
 \begin{figure}[htb]
 	\centering
